tests/fixtures/invalid/dict_add_dict.py
# Cannot add dict to dict (use | instead)
x: dict[int, int] = {1: 2} + {3: 4}
